tests/duarouter/errors/skip_new_routes_defect/options.duarouter
--net-file=input_net.net.xml --route-files=input_alts.rou.alt.xml -o routes.rou.xml --skip-new-routes
